[build-system]
requires = [ "poetry-core>=1.9.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django-ups-tnt"
version = "0.0.0"
description = "Django wrapper around UPS Time In Transit JSON API"
authors = ["thelab <thelabdev@thelab.co>"]
readme = "README.rst"
homepage = "https://gitlab.com/thelabnyc/django-ups-tnt"
repository = "https://gitlab.com/thelabnyc/django-ups-tnt"
license = "ISC"

[[tool.poetry.packages]]
include = "ups_tnt"
from = "src"

[tool.poetry.dependencies]
python = "^3.10"
Django = ">=4.2"
requests = ">=2.32.3"
djangorestframework = ">=3.15.2"
python-dateutil = ">=2.9.0.post0"

[tool.poetry.group.dev.dependencies]
coverage = ">=7.6.1"
flake8 = ">=7.1.0"
responses = ">=0.25.3"
tox = ">=4.16.0"
