[build-system]
requires = [ "poetry-core>=1.9.1",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django-ups-tnt"
version = "0.0.1"
description = "Django wrapper around UPS Time In Transit JSON API"
authors = ["thelab <thelabdev@thelab.co>"]
readme = "README.rst"
homepage = "https://gitlab.com/thelabnyc/django-ups-tnt"
repository = "https://gitlab.com/thelabnyc/django-ups-tnt"
license = "ISC"

[[tool.poetry.packages]]
include = "ups_tnt"
from = "src"

[tool.poetry.dependencies]
python = "^3.10"
Django = ">=4.2"
requests = ">=2.32.3"
djangorestframework = ">=3.15.2"
python-dateutil = ">=2.9.0.post0"

[tool.poetry.group.dev.dependencies]
coverage = ">=7.6.8"
flake8 = ">=7.1.1"
responses = ">=0.25.3"
tox = ">=4.23.2"

[tool.commitizen]
name = "cz_conventional_commits"
annotated_tag = true
gpg_sign = true
tag_format = "v$version"
update_changelog_on_bump = true
changelog_merge_prerelease = true
version_provider = "poetry"
version_scheme = "pep440"
version_files = [
    "pyproject.toml:version",
]
pre_bump_hooks = [
    "pre-commit run --all-files || true",
]
post_bump_hooks = [
    "git push origin master $CZ_POST_CURRENT_TAG_VERSION"
]
